client/my-sites/customer-home/cards/features/support/style.scss
@import '~@wordpress/base-styles/breakpoints';
@import '~@wordpress/base-styles/mixins';
$search_results_top_spacing: 24px;
$card_padding_small: 16px;
$card_padding_large: 24px;

.customer-home__layout .support {

	&.card {
		padding: 0;
	}

	.support__inner {
		padding: 16px;

		@include break-mobile {
			padding: $card_padding_large;
		}
	}

	.card-heading {
		margin-bottom: 16px;
	}

	.support__content {
		display: flex;
		justify-content: space-between;
	}

	.support__footer {
		margin-top: -#{$card_padding_large/2};
		border-top: 1px solid var( --color-border-subtle );
	}

	.support__cta {
		display: flex;
		align-items: center;
		padding: 10px $card_padding_large;
		color: var( --color-text );

		&:hover,
		&:focus {
			background: var( --color-neutral-0 );
		}
	}

	.support__help-icon {
		display: block;
		width: 27px;
		height: 27px;
		margin-right: 12px;

		background: var( --color-primary );
		box-shadow: 0 2px 6px rgba( 0, 0, 0, 0.15 );
		border: 1px solid var( --color-primary );
		border-radius: 100%;

		.gridicon {
			fill: var( --color-text-inverted );
			margin: 1px 0 0 1px;
			height: 24px;
			width: 24px;
		}
	}

	.support__go-icon {
		fill: var( --color-text );
		margin-left: auto; // push away from other cta content
		margin-right: -6px; // visually pull arrow RHS to edge of card
	}


	.support__search {
		// Don't allow ellipsis items to flow outside box
		width: 100%;
	}

	.search-card {
		margin: 0;
		border-radius: 3px;
		border-color: var( --color-border );

		.search {
			height: auto;

			&.is-open.has-focus {
				// box-shadow: 0 0 0 1px var( --color-primary ), 0 0 0 6px var( --color-primary-light );

				// @include breakpoint-deprecated( '>660px' ) {
				// 	box-shadow: 0 0 0 1px var( --color-primary ), 0 0 0 4px var( --color-primary-light );
				// }
			}

			.search__input {
				padding: 11px 0;
				font-size: 14px;
				color: var( --color-text );
			}

			.search__input::placeholder {
				color: var( --color-text-subtle );
			}

			.search__input-fade {
				// compensate for border radius to avoid clipping
				margin-right: 1px;
			}

			.search__icon-navigation {
				padding: 0 6px;
				width: 24px;
				height: 24px;

				.gridicon {
					// allow to scale to container
					width: auto;
				}
			}


		}
	}


	.support__results-list {
		list-style: none;
		text-align: left;
		margin: $search_results_top_spacing 0 0;
		padding: #{$search_results_top_spacing / 2 - 1px } 0 0 0;
		border-top: 1px solid var( --color-border-subtle );
	}

	.support__results-item {
		display: flex; // required for ellipsis overflow
		margin: 0;

		a {
			font-weight: normal;
			line-height: 1.4;
			display: block;
			padding: 8px 0;

			// Ellipsis overflow handling
			flex: 1;
			white-space: nowrap;
			overflow: hidden;
			text-overflow: ellipsis;


			&:hover,
			&:focus {
				cursor: pointer;
			}
		}

		&.is-selected {
			cursor: pointer;
			background: var( --color-primary );
			color: var( --color-text-inverted );

			a {
				color: var( --color-text-inverted );

				&:hover,
				&:focus {
					background: none;
				}
			}
		}


	}

	.support__empty-results {
		padding: 16px 0 0;
		margin: 0;
		font-size: 14px;
		color: var( --color-text-subtle );
		font-style: italic;

		@include breakpoint-deprecated( '>660px' ) {
			font-size: 16px;
		}
	}

}

